Adding info about thread-safety.
Also some stuff I didn't know about Map implementations.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -1249,7 +1249,9 @@
     "\n",
     "3. Example 3 demonstrates how boxing interacts with interning.\n",
     "\n",
-    "The expected output for each print statement is mentioned as comments in the code."
+    "The expected output for each print statement is mentioned as comments in the code.\n",
+    "\n",
+    "Note: boxed type are __immutable__."
    ]
   },
   {
