--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -360,12 +360,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64d496de",
+   "id": "daee9148",
    "metadata": {},
    "source": [
-    "# Ordering of Dictionary\n",
+    "# Map<> Implementations\n",
     "\n",
-    "`HashMap<T>` does not guarantee any order. You can use `LinkedHashMap<T>` if you want that."
+    "The above (and elsewhere examples use `Hashtable`, which is weird because it doesn't match the capitalization convention of things like `HashSet`.  The reason for that is, that is an old class you're not supposed to use anymore. For some reason ChatGPT prefers it and used it in a lot of examples.\n",
+    "\n",
+    "Here is a summary of the available major implementations of `Map<>`.\n",
+    "\n",
+    "- `Hashtable`\n",
+    "    - old, not originally a Map, retrofitted to support Map later\n",
+    "    - thread-safe but not very performant\n",
+    "- `HashMap`\n",
+    "    - recommended when don't need thread-safety\n",
+    "- `java.util.concurrent.ConcurrentHashMap`\n",
+    "    - recommended when need thread-safety (and performance)\n",
+    "- `LinkedHashMap`\n",
+    "    - like `HashMap` but __ordering of keys__ by __insertion__ is maintained by using a linked list inside\n",
+    "- `TreeMap`\n",
+    "    - like `HashMap` but __ordering of keys__ by __sort order__ rather than insertion\n",
+    "    \n",
+    "Note: in general you should assume any implementation is not thread-safe and does not preserve key order (or keep it the same over time), unless otherwise mentioned"
    ]
   },
   {
@@ -1192,6 +1208,21 @@
     "}\n",
     "\n",
     "SortingExample.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "246cebf0",
+   "metadata": {},
+   "source": [
+    "# Sorted Interfaces\n",
+    "\n",
+    "- `SortedSet` is inherited from `Set` and adds members like `first`, `last`, `subSet`, etc.\n",
+    "    - an example implementation is `TreeSet`\n",
+    "- `SortedMap` is inherited from `Map` and adds members like `firstKey`, `lastKey`, `subMap`, etc.\n",
+    "    - an example impelmentation is `TreeMap`\n",
+    "\n",
+    "Note: these sort by key, not by insertion order"
    ]
   },
   {
