--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -815,9 +815,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11954a8c",
+   "metadata": {},
+   "source": [
+    "# Thread Safety of Types\n",
+    "\n",
+    "- __immutable__ types such as boxed numbers, String, and immutable copies of collections are inherently thread-safe __once created__ because nothing is changed\n",
+    "    - eg. `String`, `Integer`, `List.of()`, etc.\n",
+    "- __numeric types__ are atomic on straight reads and writes, but there are certain operators like `++` that are not atomic\n",
+    "    - `java.util.concurrent.atomic` has types like `AtomicInteger` to deal with that\n",
+    "- __arrays are not__ thread-safe at all\n",
+    "- `ArrayList<T>` is __not__ thread-safe at all\n",
+    "     - `Vector` or `CopyOnWriteArrayList` are alternatives\n",
+    "- `HashMap` is __not__ thread-safe\n",
+    "    - `Hashtable` is thread-safe but slow\n",
+    "    - `ConcurrentHashMap` is thread-safe and more performant\n",
+    "- `HashSet` is __not__ thread-safe\n",
+    "    - but you can wrap it with `Collections.synchronizedSet()`\n",
+    "- `LinkedList` is __not__ thread-safe\n",
+    "    - but you can wrap it with `Collections.synchronizerdList()`\n",
+    "- `Stack` __is__ thread-safe\n",
+    "- `Deque` __is not__ thread-safe\n",
+    "    - but you can wrap it with `Collections.synchronizedDeque()`\n",
+    "- `PriorityQueue` __is not__ thread-safe\n",
+    "    - `PriorityBlockingQueue` is alternative\n",
+    "- `StringBuilder` __is not__ thread-safe\n",
+    "    - alternative is `StringBuffer`\n",
+    "- in general, `Collections.synchronized*()` methods wrap instances of the various interfaces in synchronized methods that forward parameters into the wrapped collections behind a mutex\n",
+    "    - this is similar to the `Collections.unmodifiable*()` methods for immutability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3b2b5a9",
+   "metadata": {},
+   "source": [
+    "# Notes about Some Thread-Safe Collections\n",
+    "\n",
+    "- `Hashset` is basically never needed (see above)\n",
+    "- `Vector` is a `List<>` but older than `ArrayList`, so only use it if you really need the thread-safety"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b64ee8c",
+   "id": "3e02fb85",
    "metadata": {},
    "outputs": [],
    "source": []
