--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -2139,9 +2139,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6852a06e",
+   "metadata": {},
+   "source": [
+    "# Immutability of Boxed Types\n",
+    "\n",
+    "Types like `Integer` are __immutable__ (value cannot be reset after creation)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb1f418c",
+   "id": "60a72382",
    "metadata": {},
    "outputs": [],
    "source": []
