Adding bitfield information.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -380,6 +380,8 @@
     "    - like `HashMap` but __ordering of keys__ by __insertion__ is maintained by using a linked list inside\n",
     "- `TreeMap`\n",
     "    - like `HashMap` but __ordering of keys__ by __sort order__ rather than insertion\n",
+    "- `EnumMap`\n",
+    "    - stores keys compactly by only using the bits needed (via enum values)\n",
     "    \n",
     "Note: in general you should assume any implementation is not thread-safe and does not preserve key order (or keep it the same over time), unless otherwise mentioned"
    ]
@@ -2038,9 +2040,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3247084d",
+   "metadata": {},
+   "source": [
+    "# Bitfields\n",
+    "\n",
+    "- `EnumSet` and `EnumMap` are implementations of `Set` and `Map` that use values of an enum as keys\n",
+    "- you pass the enum's type into the constructor so it knows how to alloate and deal with keys\n",
+    "- then you pass in enum values as keys\n",
+    "- the main advantage is that it can compute the minimum bits required to store a value of the enum and compact all the entries into a smaller amount of space"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b94c8b0",
+   "id": "af0d117c",
    "metadata": {},
    "outputs": [],
    "source": []
