Adding some special topics researched today.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 214,
    "id": "7c9d5913",
    "metadata": {},
    "outputs": [],
@@ -2593,9 +2593,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28b5cd41",
+   "metadata": {},
+   "source": [
+    "# Inheritance and Statics\n",
+    "\n",
+    "- `interface` static members can never be called other than through the interface type itself\n",
+    "    - never an instance and never a subclass type\n",
+    "- `class` static members are much more flexible\n",
+    "    - can be called via the type, via a subclass of the type, or via an instance of either\n",
+    "- `class` static members of the same name actually do C++ style name hiding\n",
+    "    - they are not virtual\n",
+    "    - a base reference calls the base one, a subclass reference calls the subclass one\n",
+    "    - you are __not allowed to annotate__ a static method as `@Override`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "2f1cbc0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MyBase.g\n",
+      "MyBase.g\n",
+      "MyBase.g\n",
+      "MyClass.h\n",
+      "MyBase.g\n"
+     ]
+    }
+   ],
+   "source": [
+    "interface MyInterface {\n",
+    "    static void f() {\n",
+    "        System.out.println(\"MyInterface.f\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class MyBase {\n",
+    "    static void g() {\n",
+    "        System.out.println(\"MyBase.g\");\n",
+    "    }\n",
+    "    \n",
+    "    // @Override // ERROR to use this annotation\n",
+    "    static void h() {\n",
+    "        System.out.println(\"MyBase.h\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class MyClass extends MyBase implements MyInterface {\n",
+    "    static void h() {\n",
+    "        System.out.println(\"MyClass.h\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Main {\n",
+    "    static void main(String[] args) {\n",
+    "        // MyClass.f(); // ERROR\n",
+    "        MyClass.g(); // OK\n",
+    "        \n",
+    "        MyClass m = new MyClass();\n",
+    "        // m.f(); // ERROR\n",
+    "        m.g();\n",
+    "        \n",
+    "        MyInterface i = m;\n",
+    "        // m.f(); // ERROR\n",
+    "        MyBase b = m;\n",
+    "        b.g();\n",
+    "        \n",
+    "        m.h();\n",
+    "        m.g();\n",
+    "    }\n",
+    "}\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a84be777",
+   "metadata": {},
+   "source": [
+    "# Objects static class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "109b94af",
+   "metadata": {},
+   "source": [
+    "- `Objects.equals(a, b)`\n",
+    "    - null-safe way to compare two objects inline\n",
+    "- `hashCode(o)`\n",
+    "    - null-safe call to .hashCode() (null -> 0 hash)\n",
+    "- `hash(o1, o2, o3, ...)`\n",
+    "    - generate a composite hash from multiple objects using their `.hashCode()` methods\n",
+    "    - hash does not match single object hash for single object (it is an array hash)\n",
+    "        - it is backed by `Arrays.hashCode(arr)`\n",
+    "- `toString(o)` and `toString(o, default)` are null-safe string conversions\n",
+    "    - first version returns null if o is null"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea4a8e2c",
+   "metadata": {},
+   "source": [
+    "# Making Object Ready for Collections\n",
+    "\n",
+    "- implement `equals()` and `hashCode()` to support hashing and operations like `remove` and `containsKey`\n",
+    "    - these two should always be done together\n",
+    "    - utiliaze `Objects.hash()` on the member of the class to easily get a hash that is consistent with `Object.equals()`\n",
+    "- implement `Comparable<T>` to support sorting and ordering\n",
+    "- implement `toString()` for serialization and/or debugging"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88f38a9e",
+   "id": "f6c5bff5",
    "metadata": {},
    "outputs": [],
    "source": []
