--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -1357,7 +1357,7 @@
    "source": [
     "# PriorityQueue and Heaps\n",
     "\n",
-    "- `PriorityQueue` is a __concrete type__\n",
+    "- `PriorityQueue` is a __concrete type__ that implements `Queue`\n",
     "    - it acts like a queue but retrieves __smallest first__\n",
     "- __minheap__ is synonymous with `PriorityQueue` (by default) and is how it's implemented\n",
     "- __maxheap__ is the opposite and can be done with a __comparator__\n",
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 107,
    "id": "d1cc2c06",
    "metadata": {},
    "outputs": [
@@ -1387,7 +1387,7 @@
     "public class HeapDemo {\n",
     "    public static void main(String[] args) {\n",
     "        // minheap\n",
-    "        PriorityQueue<Integer> q = new PriorityQueue<>();\n",
+    "        Queue<Integer> q = new PriorityQueue<>();\n",
     "        q.add(10);\n",
     "        q.add(1);\n",
     "        q.add(5);\n",
@@ -1395,7 +1395,7 @@
     "        System.out.println(q.poll());\n",
     "        \n",
     "        // maxheap\n",
-    "        PriorityQueue<Integer> qMax = new PriorityQueue<>(Comparator.reverseOrder());\n",
+    "        Queue<Integer> qMax = new PriorityQueue<>(Comparator.reverseOrder());\n",
     "        qMax.add(10);\n",
     "        qMax.add(1);\n",
     "        qMax.add(5);\n",
@@ -2053,9 +2053,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63801ee0",
+   "metadata": {},
+   "source": [
+    "# RandomAccess Interface\n",
+    "\n",
+    "This is a __marker interface__ with no members. It is meant to signal to algorithms (via `instanceof` checks) whether a `List<T>` can efficiently do random access (which is already part of the interface anyway). Some will differenatiate their behavior based on the result so that they don't thrash.\n",
+    "\n",
+    "Implementations of `List<T>` that do support it include:\n",
+    "- `ArrayList<T>`\n",
+    "- `Vector<T>`\n",
+    "\n",
+    "Implementations of `List<T>` that do not support it include:\n",
+    "- `LinkedList<T>`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34160879",
+   "metadata": {},
+   "source": [
+    "# BinarySearch\n",
+    "\n",
+    "The `Collections` and `Arrays` classes have static `binarySearch()` methods. These depend on the assumption of __already being sorted__ in some way determined by which overload you call.\n",
+    "\n",
+    "- `Collections.binarySearch(list, item)` will do binary search according to the __natural sort order__ (how `Comparable<T>` is implemented).\n",
+    "    - If the list implements the `RandomAccess` marker interface, it will be __O(log n)__\n",
+    "    - If the list doesn't, it wil be __O(n)__ because it has to scan through all the items\n",
+    "    - The type arg `extends Comparable<T>` so that it can do comparisons\n",
+    "    - __Returns an index__ of where the item was found\n",
+    "        - duplicates are undefined about which will be returned\n",
+    "        - If the item is __not found__, a negative number is returned\n",
+    "            - it is equal to `-(insertionPoint + 1)` and is defined this way to gaurantee it's always negative\n",
+    "- `Collections.binarySearch(list, item, comparator)` is the same but lets you override the `Comparable<T>` behavior with a `Comparator<T>`\n",
+    "- `Arrays.binarySearch(...)` is similar but already knows it's random access because it's an array and is this __O(log n)__\n",
+    "    - also it has a ton of overloads for __primitives__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f88e758f",
+   "metadata": {},
+   "source": [
+    "# Removing from Collections\n",
+    "\n",
+    "- `list.remove(item)`\n",
+    "    - removes __first item__ in list that matches the item, which is defined as either:\n",
+    "        - both are `null`\n",
+    "        - `o.equals(get(i))`\n",
+    "- other collections are similar\n",
+    "    - `Map<T>` also has an overload that takes __key and value__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af0d117c",
+   "id": "76b23921",
    "metadata": {},
    "outputs": [],
    "source": []
