--- a/java/Control Flow.ipynb
+++ b/java/Control Flow.ipynb
@@ -1638,6 +1638,7 @@
     "     - **java.lang.StringIndexOutOfBoundsException**: Similar to ArrayIndexOutOfBoundsException but for strings.\n",
     "     - **java.lang.IllegalArgumentException**: Thrown when a method receives an argument formatted differently than the method expects.\n",
     "     - **java.lang.ArithmeticException**: Thrown when exceptional arithmetic conditions, such as division by zero, occur.\n",
+    "     - **java.lang.ClassCastException**: a runtime cast fails type checking\n",
     "\n",
     "3. **java.io.IOException**: \n",
     "   - Represents an I/O exception of some kind. \n",
