--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -958,9 +958,173 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eff41851",
+   "metadata": {},
+   "source": [
+    "# Variadic Generic Functions\n",
+    "\n",
+    "Notice that passing a primitive array causes __unexpected behavior__ because generic type arguments cannot be primitive, which means the generic type T is set to int[] instead of int.  This is because of the double fuzziness of the type and also whether you are passing one or multiple things.\n",
+    "\n",
+    "That is why you need to _combine varargs and generics judiciously_ as it says in Effective Java."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "c6b7ced5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[I@57c4ce9d]\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Main {\n",
+    "    static <T> void f(T... args) {\n",
+    "        System.out.println(Arrays.toString(args));\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        f(new int[] {1, 2, 3});\n",
+    "        f(new Integer[] {1, 2, 3});\n",
+    "    }\n",
+    "}\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1a0226c",
+   "metadata": {},
+   "source": [
+    "# Raw Types & Unchecked Warning\n",
+    "\n",
+    "If you do something like `new List()` or `List l = ` without specifying a type parameter, that is known as a __raw type__ or __unbound type__.  It is basically pre-erased so that the compiler doesn't know the type during compilation just like you usually can't at runtime.  The reason it still works is because of the fundamental rule of generics: you can only use __reference types__. Underneath, generics are dealing with `Object`.\n",
+    "\n",
+    "The compiler will generate an __unchecked warning__ if you don't suppress it (you shouldn't suppress it).\n",
+    "\n",
+    "The result of using a raw type is that the compiler basically lets anything through because it doesn't know the type at all. So code that __shouldn't compile__ will compile, leaving __bugs__ in the code. The only reason you're allowed to do this is for __backward compatibility__ with pre-Java 5 code when generics were first introduced.\n",
+    "\n",
+    "However, it's worth noting that the raw type is used for __static members__ because they have not been instantiated from a type, including `MyClass.class`.\n",
+    "\n",
+    "Even though you should never do it, understanding what goes wrong is instructive in understanding more of how the JVM deals with generics.  Here is a summary of the scenarios demonstrated below:\n",
+    "\n",
+    "- a seemingly raw type on the right side as in `new ArrayList()` does infer the type (or at least pretends to)\n",
+    "    - but it's still recommended to use the `<>` operator for readability and to avoid future bugs with refactoring\n",
+    "    - even if the type can't be inferred, it doesn't really matter (eg. if left is raw type)\n",
+    "- once the instance is created, all that matters is the interface to it (the left side).\n",
+    "    - the instance internally just deals with `Object` or whatever type is mentioned in `<T extends ...>` syntax\n",
+    "    - if you properly type the left side, the compiler will stop any mistake\n",
+    "- if the interface used on the left side and further operations is the raw type, more serious issues happen\n",
+    "    - it can be assigned from a raw or bound instance and effectively erases the type\n",
+    "    - then you can pass in any object to methods of the generic class\n",
+    "        - but if the class uses `<T extends ...>` syntax the compiler gets another chance to check that it's at least that type\n",
+    "    - a collection can end up storing instances of objects that mismatch the type it was created for due to the actions of one raw interface adding to it\n",
+    "    - the raw interface is allowed to be assigned to any bound type of the interface\n",
+    "    - when you try retrieve an item, if the retrieval results in a cast, it will throw a runtime exception, but if not, it will pass straight through and give unexpected results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "9a102afc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi\n",
+      "Hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "\n",
+    "public class Main {\n",
+    "    @SuppressWarnings(\"unchecked\") // To suppress raw type warning for demonstration purposes\n",
+    "    public static void main(String[] args) {\n",
+    "        // This is the normal recommended way to do it.\n",
+    "        List<Integer> l1 = new ArrayList<>();\n",
+    "        // This is technically the same thing but not recommended.\n",
+    "        List<Integer> l2 = new ArrayList();\n",
+    "        \n",
+    "        // These are both errors because of the interfaces used.\n",
+    "        // l1.add(\"hi\"); // ERROR\n",
+    "        // l2.add(\"hi\"); // ERROR\n",
+    "        \n",
+    "        // These all compile and will essentially behave the same.\n",
+    "        List l3 = new ArrayList(); // Raw type on both sides\n",
+    "        List l4 = new ArrayList<>(); // Raw type on both sides\n",
+    "        List l5 = new ArrayList<Integer>(); // Raw type on left side\n",
+    "        \n",
+    "        // The instance doesn't know the thing is the wrong type\n",
+    "        // since it's not calling any methods on it in this case.\n",
+    "        l3.add(\"Hi\");\n",
+    "        l4.add(\"Hi\");\n",
+    "        l5.add(\"Hi\");\n",
+    "        \n",
+    "        // Now pretend we're in a different part of code where \n",
+    "        // raw types are not used.\n",
+    "        // Because l3 is raw type, the compiler just accepts\n",
+    "        // that it's the type we say.\n",
+    "        List<Integer> l6 = l3;\n",
+    "        List<String> l7 = l3;\n",
+    "        \n",
+    "        // In this case, the object reference passed straight\n",
+    "        // through with nobody checking it.\n",
+    "        // So it worked even though the result is weird.\n",
+    "        // The potential for BUGS here is huge!\n",
+    "        System.out.println(l6.get(0)); // \"Hi\"\n",
+    "        System.out.println(l7.get(0)); // \"Hi\"\n",
+    "        \n",
+    "        // In this case, the = operator actually checks the type at runtime\n",
+    "        // and throws an error.\n",
+    "        // The type check happens because the = operator triggers an implicit\n",
+    "        // cast from Object to Integer.\n",
+    "        // Integer i1 = l6.get(0); // RUNTIME ERROR: = operator checks type\n",
+    "        // Integer i2 = l7.get(0); // COMPILE ERROR: wrong interface\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "9d6786ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass<T extends Number> {\n",
+    "    public void f(T val) {\n",
+    "        System.out.println(val.intValue());\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Main {\n",
+    "    static void main(String[] args) {\n",
+    "        MyClass m = new MyClass();\n",
+    "        \n",
+    "        // In this case, the compiler had another chance to check\n",
+    "        // the thing you're passing in against the type constraint.\n",
+    "        // m.f(\"Hi\"); // ERROR\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feb849f2",
+   "id": "28e350f3",
    "metadata": {},
    "outputs": [],
    "source": []
