--- a/java/Operators.ipynb
+++ b/java/Operators.ipynb
@@ -877,9 +877,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0632a69",
+   "metadata": {},
+   "source": [
+    "# Casting in the JVM\n",
+    "\n",
+    "Casting happens at __runtime__ in the following scenarios:\n",
+    "\n",
+    "- explicit cast `(MyObject)m`\n",
+    "- return value from generic `Integer m = l.get(0);`\n",
+    "        - because internally generics deal with `T` which may be `Object` or whatever constrained to\n",
+    "- implicit __widening__ cast\n",
+    "- boxing/unboxing\n",
+    "\n",
+    "Casting happens at __compiletime__ in the following scenarios:\n",
+    "\n",
+    "- implicit cast to base class: `MyInterface i = m;` or `Object o = m;`\n",
+    "- assignment of same type\n",
+    "\n",
+    "A __runtime cast__ for a reference type is basically just a __type check__. If the type check fails, it will throw `ClassCastException`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108ad316",
+   "id": "23bc764b",
    "metadata": {},
    "outputs": [],
    "source": []
