Adding Flow API.

--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -858,9 +858,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff21def7",
+   "metadata": {},
+   "source": [
+    "# Flow API\n",
+    "\n",
+    "The Flow API is a __reactive programming__ (officially __Reactive Streams__) library (similar to rxjs) within the standard library.\n",
+    "\n",
+    "It is accessed on the `java.util.concurrent.Flow` class via __static methods__ and __nested interfaces__.\n",
+    "\n",
+    "- `Subscriber<T>`\n",
+    "    - an interface for your class to implement to receive streamed data\n",
+    "    - `onComplete`, `onError`, `onNext`, `onSubscribe`\n",
+    "    - equivalent in rxjs is the lambdas you pass into _observable.subscribe()_, wrapped into one client interface here\n",
+    "        - you could use an __anonymous class__ to make it look more similar to rxjs\n",
+    "- `Publisher<T>`\n",
+    "    - an interface with one method, `subscribe(subscriber)`\n",
+    "    - equivalent to _Observable<T>_ in rxjs\n",
+    "- `SubmissionPublisher<T>`\n",
+    "    - implementation of `Publisher<T>` for asynchronous buffered submission of data\n",
+    "    - has a lot more methods than just the `Publisher<T>` interface\n",
+    "        - probably have to store its reference instead of the interface\n",
+    "- `Subscription`\n",
+    "    - passed into `Subscriber<T>` at subscribe time to be stored and used by the other methods\n",
+    "    - `request(n)` requests more items (eg. 1 for next item)\n",
+    "    - `cancel()` to stop getting items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "15a0479d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Publishing items...\n",
+      "Received: item1\n",
+      "Received: item2\n",
+      "Received: item3\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.concurrent.Flow.*;\n",
+    "import java.util.concurrent.SubmissionPublisher;\n",
+    "\n",
+    "public class FlowExample {\n",
+    "\n",
+    "    public static void main(String[] args) throws InterruptedException {\n",
+    "\n",
+    "        // 1. Create a publisher\n",
+    "        SubmissionPublisher<String> publisher = new SubmissionPublisher<>();\n",
+    "\n",
+    "        // 2. Create a subscriber\n",
+    "        Subscriber<String> subscriber = new Subscriber<>() {\n",
+    "\n",
+    "            private Subscription subscription;\n",
+    "\n",
+    "            @Override\n",
+    "            public void onSubscribe(Subscription subscription) {\n",
+    "                this.subscription = subscription;\n",
+    "                subscription.request(1);\n",
+    "            }\n",
+    "\n",
+    "            @Override\n",
+    "            public void onNext(String item) {\n",
+    "                System.out.println(\"Received: \" + item);\n",
+    "                subscription.request(1);  // request the next item\n",
+    "            }\n",
+    "\n",
+    "            @Override\n",
+    "            public void onError(Throwable throwable) {\n",
+    "                throwable.printStackTrace();\n",
+    "            }\n",
+    "\n",
+    "            @Override\n",
+    "            public void onComplete() {\n",
+    "                System.out.println(\"Done\");\n",
+    "            }\n",
+    "        };\n",
+    "\n",
+    "        // 3. Subscribe the subscriber to the publisher\n",
+    "        publisher.subscribe(subscriber);\n",
+    "\n",
+    "        // 4. Publish some items\n",
+    "        System.out.println(\"Publishing items...\");\n",
+    "        String[] items = {\"item1\", \"item2\", \"item3\"};\n",
+    "        for (String item : items) {\n",
+    "            publisher.submit(item);\n",
+    "        }\n",
+    "\n",
+    "        // 5. Close the publisher\n",
+    "        publisher.close();\n",
+    "\n",
+    "        Thread.sleep(1000);  // just to ensure all events are processed before exiting\n",
+    "    }\n",
+    "}\n",
+    "FlowExample.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e02fb85",
+   "id": "58b5a091",
    "metadata": {},
    "outputs": [],
    "source": []
