--- a/SQL/Syntax.ipynb
+++ b/SQL/Syntax.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "62dad745",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql\n",
+    "%sql duckdb://"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bebd510",
+   "metadata": {},
+   "source": [
+    "# Errors in this File\n",
+    "\n",
+    "- none of the syntax in this file works with DuckDB, so you can't run the cells\n",
+    "- the concepts such as data types do apply though\n",
+    "- the syntax in here may be useful for other systems though not as widely"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "db56bc49",
    "metadata": {},
@@ -22,11 +45,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "eb554e68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RuntimeError: If using snippets, you may pass the --with argument explicitly.\n",
+      "For more details please refer: https://jupysql.ploomber.io/en/latest/compose.html#with-argument\n",
+      "\n",
+      "\n",
+      "Original error message from DB driver:\n",
+      "(duckdb.ParserException) Parser Error: syntax error at or near \"DECLARE\"\n",
+      "LINE 4: DECLARE @intVariable INT; -- Declaration of an integer variable...\n",
+      "        ^\n",
+      "[SQL: -- Demonstration of SQL built-in data types and literals\n",
+      "\n",
+      "-- Integer data type\n",
+      "DECLARE @intVariable INT; -- Declaration of an integer variable]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
+      "\n",
+      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
+     ]
+    }
+   ],
    "source": [
+    "%%sql\n",
+    "\n",
     "-- Demonstration of SQL built-in data types and literals\n",
     "\n",
     "-- Integer data type\n",
@@ -101,6 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%sql\n",
+    "\n",
     "-- Single quotes\n",
     "DECLARE @singleQuote VARCHAR(20) = 'This is a single-quoted string';\n",
     "PRINT @singleQuote; -- This is a single-quoted string\n",
@@ -164,6 +225,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%sql\n",
+    "\n",
     "-- Create a table to store employee information\n",
     "CREATE TABLE employees (\n",
     "    id INT PRIMARY KEY,\n",
@@ -229,6 +292,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%sql\n",
+    "\n",
     "-- Declare a variable\n",
     "DECLARE @myVariable INT;\n",
     "\n",
@@ -280,6 +345,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%sql\n",
+    "\n",
     "-- SQL Macros\n",
     "\n",
     "-- Macros are a way to define reusable code snippets in SQL. They can be used to simplify complex queries or to avoid repetitive code.\n",
@@ -338,6 +405,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
